--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.3",
+    "react-native": "^0.43.3",
     "react-native-textinput-effects": "^0.3.0"
   },
   "devDependencies": {
