--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
-    "react-native": "^0.43.3",
+    "react-native": "^0.44.0",
+    "react-native-communications": "^2.2.1",
+    "react-native-router-flux": "^3.39.1",
     "react-native-textinput-effects": "^0.3.0",
+    "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
